Fixed some stretching problems

--- a/style.css
+++ b/style.css
@@ -117,6 +117,8 @@ li {
     display:flex;
     justify-content: center;
     padding:0 30px;
+    max-width:1400px;
+    margin:auto;
 }
 
 .hotdog-menu-item > img {
